# structify

./: .example_env  BACKEND_USAGE.md  QUICKSTART.md  README.md  gpt_preprocess.py  main.py  models.py  prompt.md  pyproject.toml  sweep_test_data.py  test_backends.py
results/: 01_email.json  02_meeting_notes.json  03_slack_message.json  04_calendar_event.json  05_social_media.json  06_product_review.json  07_news_article.json  08_invoice.json  09_support_ticket.json  10_research_notes.json  11_interview_transcript.json  12_recipe.json  13_bug_report.json  14_customer_feedback.json  15_job_posting.json
src/structify/: __init__.py  gpt_preprocess.py
test_data/: 01_email.md  02_meeting_notes.md  03_slack_message.md  04_calendar_event.md  05_social_media.md  06_product_review.md  07_news_article.md  08_invoice.md  09_support_ticket.md  10_research_notes.md  11_interview_transcript.md  12_recipe.md  13_bug_report.md  14_customer_feedback.md  15_job_posting.md  16_conference_abstract.md  17_medical_note.md  18_legal_document.md  19_course_announcement.md  20_journal_entry.md
