[project]
name = "structify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "instructor>=1.11.3",
    "ipdb>=0.13.13",
    "openai>=1.109.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
]
